<resources>
    <string name="app_name">Thruster App</string>
    <string name="email">  Correo</string>
    <string name="password">  Contraseña</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="de_nuevo">DE NUEVO</string>
    <string name="login_text">Inicio de sesión</string>
    <string name="entrar">   ENTRAR</string>
    <string name="sin_cuenta">Sin cuenta? Registrate ahora</string>
    <string name="title_activity_calendar">calendar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">REGISTRO</string>
    <string name="registrar">REGISTRAR AHORA</string>
    <string name="con_cuenta">Ya tienes una cuenta? Ingresa ahora</string>
    <string name="documento">  Documento</string>
    <string name="direccion">  Dirección</string>
    <string name="telefono">  Teléfono</string>
    <string name="basico">Plan básico</string>
    <string name="descripcion">Descripción</string>
    <string name="mi_plan">Mi plan</string>
    <string name="asistencia_tres_veces">Asistencia 3 veces por semana</string>
    <string name="pay">Pagar</string>
    <string name="more_plans">Más planes</string>
    <string name="boton_agendar">Agendar</string>
    <string name="titulo_rutina">Rutina del dia</string>



    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Calendario</string>
    <string name="title_notifications">Planes</string>
    <string name="title_calendar">Configuracion</string>

    <string name="plan_semanal">Plan Semanal</string>
    <string name="price">$ 80. 000</string>
    <string name="asistencia_cinco_veces">Asistencia 5 veces por semana</string>
    <string name="price_person">$ 120.000</string>
    <string name="asistencia_premium">Asistencia agendada por el ususario</string>
    <string name="name">Nombre y apellidos</string>
    <string name="cambiar">Cambiar</string>
    <string name="personalizado">Plan Personalizado</string>
    <string name="volver_button">volver</string>
    <string name="editar_button">Editar</string>
    <string name="close_sesion">Está seguro de cerrar la sesión?</string>
    <string name="log_out">Salir</string>

    <string name="resumen">Tu resumen de entreno</string>
    <string name="dias_asistidos">Cantidad de dias asistidos</string>
    <string name="rutina_label">Rutina del dia</string>
    <string name="warm_up">Warm Up</string>
    <string name="wod">Wod</string>
    <string name="forgot_password">Olvidaste tu contraseña?</string>
</resources>