<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".RegisterActivity"
android:background="@drawable/login_wallpaper"
    >

<View
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:alpha="0.5"
    android:background="@color/black" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_regular"
        android:layout_marginStart="79dp"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        android:textColor="@color/gray"
        android:textSize="60sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_regular"
        android:text="@string/register"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="-85dp"
        android:layout_marginStart="76dp"
        />

    <EditText
        android:id="@+id/editText_ID_register"
        android:layout_marginTop="40dp"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/jost_regular"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/documento"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/editText_password_register"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:fontFamily="@font/jost_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="14dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/editText_email_register"
        android:layout_marginTop="10dp"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/jost_regular"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/editText_direccion_register"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:fontFamily="@font/jost_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="14dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/editText_telefono_register"
        android:layout_marginTop="10dp"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/jost_regular"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="textPersonName"
        />
    <Button
        android:id="@+id/button_register"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/azul"
        android:fontFamily="@font/jost_regular"
        android:text="@string/registrar"
        android:letterSpacing="0.6"
        />

    <TextView
        android:id="@+id/textView_register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/jost_regular"
        android:layout_marginTop="50dp"
        android:text="@string/con_cuenta"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_login"
        />

</LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>