<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.payment.PaymentFragment">
    <include
        layout="@layout/encabezado"
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="383dp"
        android:layout_height="210dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encabezado"
        app:layout_constraintVertical_bias="0.037">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/mi_plan"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/miPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/basico"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/descripcion"
            android:textColor="@color/azul"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/jost_regular"
            android:text="@string/asistencia_tres_veces" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="165dp"
            android:fontFamily="@font/jost_regular"
            android:text="Hasta, 5 / May / 23"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_pagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:layout_marginTop="156dp"
            android:fontFamily="@font/jost_bold"
            android:text="@string/pay"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:elevation="10dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/more_plans"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.053" />

    <androidx.cardview.widget.CardView
        android:layout_width="383dp"
        android:layout_height="235dp"
        app:cardBackgroundColor="@color/cardGray"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.234" >

        <androidx.cardview.widget.CardView
            android:layout_width="363dp"
            android:layout_height="97dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/cardGray"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:text="@string/plan_semanal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="242dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/jost_regular"
                android:text="@string/price"
                android:textColor="@color/azul"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/jost_regular"
                android:text="@string/descripcion"
                android:textColor="@color/azul" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/jost_regular"
                android:text="@string/asistencia_cinco_veces"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_semanal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="238dp"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/jost_bold"
                android:text="@string/cambiar"
                android:textSize="14sp"
                app:cornerRadius="16dp"
                app:elevation="10dp" />
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="363dp"
            android:layout_height="97dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="117dp"
            app:cardBackgroundColor="@color/cardGray"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/jost_regular"
                android:text="@string/personalizado"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="242dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/jost_regular"
                android:text="@string/price_person"
                android:textColor="@color/azul"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:textColor="@color/azul"
                android:text="@string/descripcion"
                android:layout_marginTop="40dp"
                android:layout_marginStart="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/jost_regular"
                android:text="@string/asistencia_premium"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_personalizado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="238dp"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/jost_bold"
                android:text="@string/cambiar"
                android:textSize="14sp"
                app:cornerRadius="16dp"
                app:elevation="10dp" />
            />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>