<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_wallpaper"
    >

  <View
      android:id="@+id/view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentBottom="true"
      android:alpha="0.5"
      android:background="@color/black" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/jost_regular"
        android:shadowColor="@color/gray"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/jost_regular"
        android:text="@string/de_nuevo"
        android:textColor="@color/gray"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="-90dp"
        android:fontFamily="@font/jost_regular"
        android:text="@string/de_nuevo"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/jost_regular"
        android:letterSpacing="0.3"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background_normal"
        android:columnCount="2"
        android:rowCount="1"
        android:textAlignment="center">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:src="@drawable/perfil_usuario"
          android:textAlignment="center" />

      <EditText
          android:id="@+id/editText_email_login"
          android:layout_width="340dp"
          android:layout_height="50dp"
          android:layout_marginStart="5dp"
          android:background="@android:color/transparent"
          android:ems="10"
          android:fontFamily="@font/jost_regular"
          android:hint="@string/email"
          android:inputType="textPersonName"
          android:textColor="@color/azul"
          android:textStyle="bold" />

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/editbox_background_normal"
        android:columnCount="2"
        android:rowCount="1"
        android:textAlignment="center">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:src="@drawable/candado"
          android:textAlignment="center" />

      <EditText
          android:id="@+id/editText_password_login"
          android:layout_width="340dp"
          android:layout_height="50dp"
          android:layout_marginStart="5dp"
          android:background="@android:color/transparent"
          android:ems="10"
          android:fontFamily="@font/jost_regular"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:textColor="@color/azul"
          android:textStyle="bold" />

    </GridLayout>


    <GridLayout
        android:id="@+id/boton_completo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:background="@color/azul"
        android:columnCount="2"
        android:rowCount="1"
        android:textAlignment="center">

      <TextView
          android:id="@+id/button_login"
          android:layout_width="346dp"
          android:layout_height="48dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="16sp"
          android:fontFamily="@font/jost_regular"
          android:letterSpacing="1"
          android:text="@string/entrar"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="20sp"
          android:textStyle="bold" />

      <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginTop="14dp"
          android:src="@drawable/flechas"
          android:textAlignment="center" />

    </GridLayout>

    <TextView
        android:id="@+id/textView_register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/jost_regular"
        android:text="@string/sin_cuenta"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_login" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>