<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">



            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/jost_bold"
                android:text="@string/close_sesion"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <GridLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="7dp">


                <Button
                    android:id="@+id/volver"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:letterSpacing="0.5"
                    android:layout_marginTop="27dp"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/volver_button" />


                <Button
                    android:id="@+id/logOut"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="27dp"
                    android:letterSpacing="0.4"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:text="@string/log_out"
                    app:backgroundTint="@color/buttonRed" />

            </GridLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>